[package]
name = "move-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
once_cell = "1.10.0"
tempfile = "3.1.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
datatest-stable = "0.1.1"
base64 = "0.13.0"
walkdir = "2"
getopts = "0.2"
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_bytes = "0.11.5"
hex = "0.4.3"
bcs = "0.1.3"
clap = "3.2.22"

schemars = {git = "https://github.com/starcoinorg/schemars", rev = "6972da92f4360e1779168bb3fe0274c521d324e2"}
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "4735fa59b63e1b30622411d8af65129e4c80b3bc" }
move-compiler = { package="move-compiler", git = "https://github.com/starcoinorg/move", rev = "4735fa59b63e1b30622411d8af65129e4c80b3bc"  }
move-command-line-common = {git = "https://github.com/starcoinorg/move", rev = "4735fa59b63e1b30622411d8af65129e4c80b3bc"}
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "4735fa59b63e1b30622411d8af65129e4c80b3bc"  }
move-disassembler = {git = "https://github.com/starcoinorg/move", rev = "4735fa59b63e1b30622411d8af65129e4c80b3bc"}

[[bin]]
name = "move-web"
path = "src/main.rs"