[package]
name = "move-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
once_cell = "1.10.0"
tempfile = "3.1.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
datatest-stable = "0.1.1"
base64 = "0.13.0"
walkdir = "2"
getopts = "0.2"
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_bytes = "0.11.5"
hex = "0.4.3"
bcs = "0.1.4"
clap = "3.2.22"

schemars = {git = "https://github.com/starcoinorg/schemars", rev = "9b3705780b8fe9c8676ff82919869ba7405b1062"}
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848" }
move-compiler = { package="move-compiler", git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"  }
move-command-line-common = {git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"}
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"  }
move-disassembler = {git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"}
move-bytecode-source-map = {git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"}
move-ir-types = {git = "https://github.com/starcoinorg/move", rev = "0b3686b4edcd37fd0c61c1aa26859c21985f3848"}
starcoin-crypto = {git = "https://github.com/pym-labs/starcoin-crypto", rev = "a742ddc0674022800341182cbb4c3681807b2f00"}

[[bin]]
name = "move-web"
path = "src/main.rs"