[package]
name = "move-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
once_cell = "1.10.0"
tempfile = "3.1.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
datatest-stable = "0.2.3"
base64 = "0.21.6"
walkdir = "2"
getopts = "0.2"
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_bytes = "0.11.5"
hex = "0.4.3"
bcs = "0.1.3"
clap = "4.4.14"

schemars = {git = "https://github.com/starcoinorg/schemars", rev = "6972da92f4360e1779168bb3fe0274c521d324e2"}

move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-compiler = { package="move-compiler", git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-command-line-common = {git = "https://github.com/aptos-labs/aptos-core", branch = "main"}
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-disassembler = {git = "https://github.com/aptos-labs/aptos-core", branch = "main"}
move-bytecode-source-map = {git = "https://github.com/aptos-labs/aptos-core", branch = "main"}
move-ir-types = {git = "https://github.com/aptos-labs/aptos-core", branch = "main"}
starcoin-crypto = {git = "https://github.com/pym-labs/starcoin-crypto", rev = "ada7f71f3585670106e356f82a8d817e8115b41b"}

[[bin]]
name = "move-web"
path = "src/main.rs"
